--- a/netflix/index.html
+++ b/netflix/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="C:\Users\sys\Desktop\netflix\style.css">
-  <title>Document</title>
+  <title>Netflix-clone</title>
 </head>
 <body>
   <div class="header">
     <nav>
       
-      <img src="c:\Users\sys\Downloads\netflix-removebg-preview.png" class="logo" alt=""> -
+      <img src="c:\Users\sys\Downloads\netflix-removebg-preview.png" class="logo" alt="Add logo of netflix"> 
       <div>
         <button class="language-btn" >English <img src="c:\Users\sys\Downloads\down-removebg-preview.png" > </button>
         <button>sign in</button>
@@ -37,14 +37,14 @@
         <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
       </div>
       <div class="img-col">
-        <img src="c:\Users\sys\Downloads\tv.png" alt="">
+        <img src="c:\Users\sys\Downloads\tv.png" >
       </div>
     </div>
 
 
     <div class="row">
       <div class="img-col">
-        <img src="c:\Users\sys\Downloads\stranger.jpg" alt="">
+        <img src="c:\Users\sys\Downloads\stranger.jpg" >
 
       </div>
       <div class="text-col">
@@ -62,14 +62,14 @@
         <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV..</p>
       </div>
       <div class="img-col">
-        <img src="c:\Users\sys\Downloads\sacred.png" alt="">
+        <img src="c:\Users\sys\Downloads\sacred.png" >
       </div> 
     </div>
 
 
     <div class="row">
       <div class="img-col">
-        <img src="c:\Users\sys\Downloads\child.png" alt="">
+        <img src="c:\Users\sys\Downloads\child.png" >
 
       </div>
       <div class="text-col">
@@ -95,9 +95,9 @@
 
           
           <div class="content">
-            <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
+            <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more  on thousands of internet-connected devices.
 
-              You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!.</p>
+              You can watch as much as you want, whenever you want, without a single ad all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!.</p>
           </div>
         </li>
         <li>
